2002-03-20  Padraig O'Briain  <padraig.obriain@sun.com>

	* src/yelp-window.c (yw_handle_url): Call yelp_view-content)show_uri()
	before gtk_notebook_set_current_page() (#75570)

2002-03-20  Christophe Merlet  <redfox@eikonex.org>

	* configure.in: Added fr to $ALL_LINGUAS.

2002-03-19  Mikael Hallendal  <micke@codefactory.se>

	* configure.in: bumped version to 0.4.99

	* Release 0.4
	
	* configure.in: updated to 0.4

2002-03-19  Sandeep V Honde  <sandeep.honde@wipro.com>

	* src/yelp-main.c:
	- Session management support for multiple
	  windows added.
	  (yelp_save_session)    :modified.
	  (yelp_restore_session) :added/impl.

2002-03-04  Mikael Hallendal  <micke@codefactory.se>

	* configure.in: bumped version to 0.3.99

	* Release 0.3

	* configure.in: 
	- updated version to 0.3
	- updated deps of libgnome and gtkhtml2

	* NEWS: updated for 0.3

2002-03-05  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

2002-03-04  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* src/yelp-window.c: add a comment for translators

2002-03-03  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-man.c:
	- Fixes #73292
	(yelp_man_populate_tree_for_subdir): add to section index list.
	(yelp_man_init): concat the man index list with the global.

	* src/yelp-info.c (yelp_info_init): call strdown on the names
	  before adding to index.

	* src/yelp-index-model.c (yelp_index_model_filter): don't show all
	  index-words by default. Only show the words matching the
	  query. Not sure what is the best way to do this, but with all
	  man and info pages in the index it got pretty crowded.

	* src/yelp-base.c (yelp_base_new): pass index to man_init.

	* src/yelp-window.c (yelp_window_new): fixed an error if you don't
	  have an index installed (thanks rhult).

	* src/yelp-index-model.c: use the new YELP_SECTION-macro.
	* src/yelp-view-toc.c: same.
	* src/yelp-util.c: same.
	* src/yelp-scrollkeeper.c: same.
