@@ -1,3 +1,8 @@
+2002-03-20  Jagadeesh B. G  <jagadeesh.bana@wipro.com>
+
+	* src/yelp-view-index.c: Set atk relation for search entry and
+	  label as part of accessibility changes
+
 2002-03-20  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* src/yelp-window.c (yw_handle_url): Call yelp_view-content)show_uri()
